fixed alignment on project squares

--- a/style.css
+++ b/style.css
@@ -90,8 +90,8 @@ padding: 50px 80px;
     transform-style: preserve-3d;
 }
 #card-image{
-    height: 245px;
-    width: 245px;
+    height: 247px;
+    width: 212px;
     opacity: .7;
 }
 .card figure{
